# zellij-pane-colors

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml
src/: main.rs
